# buoy-search

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: agent-answering-workflow.md  catalog.md  generic-site-rag-plan-apply.md  indexing.md  migrating-to-buoy.md  releasing.md  retrieval.md
jellyfish-site-docs/: jellyfish.co_.md  jellyfish.co_2024-state-of-engineering-management-report-thank-you-page-priority-list_.md  jellyfish.co_2024-state-of-engineering-management-report-thank-you_.md  jellyfish.co_2024-state-of-software-engineering-intelligence-report-thank-you-page_.md  jellyfish.co_2025-state-of-engineering-management-report-thank-you-page_.md  jellyfish.co_2026-state-of-engineering-management_.md  jellyfish.co_5-to-9-podcast_.md  jellyfish.co__post_type=resources&p=26886.md  jellyfish.co_ai-benchmarks-what-jellyfish-research-learned-from-analyzing-20-million-prs-thank-you_.md  jellyfish.co_ai-copilot-raffle-thank-you_.md  jellyfish.co_ai-engineering-trends_.md  jellyfish.co_ai-impact-framework-elc-slides-thank-you_.md  jellyfish.co_ai-impact-raffle_.md  jellyfish.co_author-sitemap.xml.md  jellyfish.co_author_posttype-sitemap.xml.md  jellyfish.co_aws_.md  jellyfish.co_blog-subscription-thank-you_.md  jellyfish.co_blog_.md  jellyfish.co_blog_2-schools-of-thought-roi_.md  jellyfish.co_blog_2021-year-in-review_.md  jellyfish.co_blog_2022-jellyfish-year-in-review_.md  jellyfish.co_blog_2024-illuminate-awards-winners_.md  jellyfish.co_blog_2024-state-of-engineering-management-report_.md  jellyfish.co_blog_2025-dora-report_.md  (+1099 more)
(+576 files in other folders)
