[project]
name = "turbo-search"
version = "0.1.0"
description = "Local Python prototype scaffold for Jellyfish docs RAG with turbopuffer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
authors = [{ name = "turbo-search maintainers" }]
dependencies = [
    "turbopuffer",
    "sentence-transformers",
    "PyYAML",
]

[project.scripts]
turbo-search = "turbo_search.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/turbo_search"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
